--- a/src/app/todos/list/list.component.scss
+++ b/src/app/todos/list/list.component.scss
@@ -49,16 +49,18 @@
 
         .todo-user {
           display: flex;
-          align-items: center;
-          font-size: 14px;
+          align-items: flex-start;
+          font-size: 12px;
           color: gray;
           margin-top: 5px; /* Distanza dalla descrizione */
+          .user-icon {
+            margin-right: 5px;
+            font-size: 14px;
+            color: #7e4679; /* Colore dell'icona */
+          }
         }
         
-        .user-icon {
-          margin-right: 5px;
-          color: #607d8b; /* Colore dell'icona */
-        }
+        
       
       }
       
